--- a/style.scss
+++ b/style.scss
@@ -43,9 +43,7 @@ $font-color-hover: rgba(0,0,0,0);
 body{
   font-family: 'Barlow', sans-serif;
 }
-.container{
-  width: 100%;
-  margin: 0px auto;
+
 .header{
   overflow: hidden;
    background-image:url(./images/pexels-jakub-zerdzicki-18538670.jpg) ;
@@ -163,9 +161,12 @@ body{
 }
 }
 
-.container-main{
+//om oss
+ 
+.om-oss{
   text-align: center; 
   align-items: center;
+  display: flex;
 
   .om-oss-wrapper{
     height: 100vh;
@@ -175,23 +176,21 @@ body{
     justify-content: center;
     gap:10px;
     
+    
     .om-oss-title{
       text-align: center;
-      font-family:  sans-serif;
-      
-   p{
-    
+      font-family:  sans-serif; 
+        p{
     color: $font-color-1;
     font-size: 1.6rem;
     text-align: center;
     padding: 6px;
-   }
+         }
     }
     .om-oss-img{
       img{
         width:60%;
         border-radius: 100px;
-        
       }
     }
     .om-oss-text{
@@ -203,31 +202,43 @@ body{
       }
     }
   }
+}
+  
+  
+
+
+
+  //service
+
 
   .service-section {
+    background-color: red;
     display: flex;
     flex-direction: column;
     padding: 20px;
-    background-color: $color-2;
     
 
     .service {
-      border: 1px solid #ddd;
-      background-color: $font-color-2;
+      border: 2px solid $color-2;
       border-radius: 20px;
-      padding: 10px;
+      padding: 20px;
       margin: 10px 0;
       @include button-Style();
+
+      img{
+        max-width: 50px;
+        
+      }
     
       h2{
         margin-bottom: 5px;
-        
       }
       p{
         text-align: left;
       }
     }
   }
+
   
   
 
@@ -254,11 +265,6 @@ footer{
       img{
       
         max-width: 100px;
-        
-        
-        
-       
-       
       }
     }
     
@@ -307,7 +313,8 @@ footer{
   
 }
 }
-}
+
+
 
 
 //Media
@@ -328,11 +335,12 @@ footer{
         justify-content: space-around;
         li{
           display: inline-block;
+          border: 1px solid $font-color-2;
           text-align: center;
           padding:auto;
           width:150px;
-          box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
           border-radius: 15px;
+          @include button-Style();
           a{
             text-align: center;
             padding: auto;
@@ -342,17 +350,75 @@ footer{
       }
     }
   }
+  
   .service-section {
     flex-direction: row;
-    
+    justify-content: space-around;
+    background-color: red;
+      img{
+        max-width: 100%;
+      }
+    }
+ 
+.om-oss{
+ 
+
+  flex-direction: row;
+  justify-content: space-around;
+  width: 100vw;
+  border: 1px solid blue;
+  height: 100vh;
+  align-content: center;
+  align-items: center;
+
+  .om-oss-wrapper{
+    margin: auto;
+    padding: auto;
+    position: relative;
+    flex-direction: row;
+    justify-content: space-around;
+    padding-top:100px;
+
+    .om-oss-title{
+     width: 13%;
+     max-width: 200x;
+     border: 1px solid red;
+     position: absolute;
+     top:60px;
+    }
+
+    .om-oss-img{
+      width:60%;
+      max-width: 500px;
+      padding: 0px;
+      border: 1px solid red;
+      margin: auto;
+      padding: auto;
+    }
+    .om-oss-text{
+      margin: auto;
+      padding: auto;
+      p{
+        font-size:1.3rem;
+        padding: 30px;
+      }
+      width: 50%;
+      max-width: 400px;
+      border: 1px solid rgb(0, 204, 255);
+    }    
+   
+  }
+
 }
 
-.service {
-    flex: 1;
-    margin: 0 10px;
 }
-}  
-}
+
+
+  
+  
+
+
+
 
 
 
