--- a/style.css
+++ b/style.css
@@ -155,7 +155,8 @@ body {
 }
 
 .service-section {
-  background-color: red;
+  width: 100%;
+  margin: auto;
   display: flex;
   flex-direction: column;
   padding: 20px;
@@ -165,6 +166,10 @@ body {
   border-radius: 20px;
   padding: 20px;
   margin: 10px 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 .service-section .service:hover {
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
@@ -255,9 +260,20 @@ footer .text-footer {
     margin: auto;
   }
   .service-section {
+    width: 60%;
+    background-color: lightgray;
+    display: flex;
+    flex-wrap: wrap;
     flex-direction: row;
     justify-content: space-around;
-    background-color: red;
+    gap: 10px;
+  }
+  .service-section .service {
+    max-width: 200px;
+    min-width: 100px;
+  }
+  .service-section .service p {
+    font-size: 0.8rem;
   }
   .service-section img {
     max-width: 100%;
@@ -266,7 +282,7 @@ footer .text-footer {
     flex-direction: row;
     justify-content: space-around;
     width: 100vw;
-    border: 1px solid blue;
+    padding: 50px;
     height: 100vh;
     align-content: center;
     align-items: center;
@@ -278,25 +294,30 @@ footer .text-footer {
     flex-direction: row;
     justify-content: space-around;
     padding-top: 100px;
+    min-width: 600px;
+    flex-wrap: wrap;
   }
   .om-oss .om-oss-wrapper .om-oss-title {
     width: 13%;
     max-width: 200x;
-    border: 1px solid red;
     position: absolute;
     top: 60px;
   }
   .om-oss .om-oss-wrapper .om-oss-img {
-    width: 60%;
+    width: 40%;
+    height: 70%;
     max-width: 500px;
     padding: 0px;
-    border: 1px solid red;
+    border: 1px solid blue;
     margin: auto;
-    padding: auto;
+    padding: 0px;
+    border-radius: 0px;
   }
   .om-oss .om-oss-wrapper .om-oss-text {
     margin: auto;
     padding: auto;
+    height: 70%;
+    width: 60%;
     width: 50%;
     max-width: 400px;
     border: 1px solid rgb(0, 204, 255);
