--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ body {
   list-style: none;
 }
 .header nav li .active {
-  color: rgba(254, 203, 1, 0.6);
+  color: rgba(254, 203, 1, 0.258);
   text-align: center;
 }
 .header nav li a {
@@ -67,7 +67,7 @@ body {
   transition: 0.3s ease-out;
 }
 .header nav li:hover :hover {
-  color: rgba(151, 251, 234, 0.562);
+  color: rgba(151, 251, 234, 0.279);
 }
 .header h1 {
   color: rgb(255, 255, 255);
@@ -115,7 +115,7 @@ body {
   border: 1px solid rgb(255, 255, 255);
 }
 .header .button-1:hover:hover {
-  background-color: rgba(254, 203, 1, 0.6);
+  background-color: rgba(254, 203, 1, 0.258);
 }
 
 .om-oss {
@@ -137,7 +137,7 @@ body {
 }
 .om-oss .om-oss-wrapper .om-oss-title p {
   color: rgba(0, 0, 0, 0.838);
-  font-size: 1.6rem;
+  font-size: 2rem;
   text-align: center;
   padding: 6px;
 }
@@ -160,16 +160,19 @@ body {
   display: flex;
   flex-direction: column;
   padding: 20px;
+  background-color: rgba(176, 136, 202, 0.578);
 }
 .service-section .service {
-  border: 2px solid rgba(151, 251, 234, 0.562);
+  border: 1px solid rgb(255, 255, 255);
   border-radius: 20px;
   padding: 20px;
-  margin: 10px 0;
+  margin: 10px auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  max-width: 300px;
+  min-width: 200px;
 }
 .service-section .service:hover {
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
@@ -260,8 +263,7 @@ footer .text-footer {
     margin: auto;
   }
   .service-section {
-    width: 60%;
-    background-color: lightgray;
+    width: 100%;
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
@@ -269,8 +271,8 @@ footer .text-footer {
     gap: 10px;
   }
   .service-section .service {
-    max-width: 200px;
-    min-width: 100px;
+    max-width: 300px;
+    min-width: 300px;
   }
   .service-section .service p {
     font-size: 0.8rem;
@@ -308,7 +310,6 @@ footer .text-footer {
     height: 70%;
     max-width: 500px;
     padding: 0px;
-    border: 1px solid blue;
     margin: auto;
     padding: 0px;
     border-radius: 0px;
@@ -320,7 +321,6 @@ footer .text-footer {
     width: 60%;
     width: 50%;
     max-width: 400px;
-    border: 1px solid rgb(0, 204, 255);
   }
   .om-oss .om-oss-wrapper .om-oss-text p {
     font-size: 1.3rem;
