--- a/style.css
+++ b/style.css
@@ -20,30 +20,28 @@ body {
   background-position: 30%;
   height: 100vh;
   width: 100%;
-  /* START NAVIGATION */
-  /* END NAVIGATION */
 }
-.header .content {
+.header .content-nav {
   padding: 10px 20px;
-  background-color: rgba(176, 136, 202, 0.578);
+  background-color: lightblue;
   display: flex;
   justify-content: space-between;
 }
-.header .content .logo:hover {
+.header .content-nav .logo:hover {
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   border-radius: 10px;
 }
-.header .content .toggler {
+.header .content-nav .toggler {
   cursor: pointer;
   position: absolute;
   top: 8px;
   right: 50px;
 }
-.header .content .toggler button {
+.header .content-nav .toggler button {
   background-color: transparent;
   border: none;
 }
-.header .content .toggler button:hover {
+.header .content-nav .toggler button:hover {
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   border-radius: 10px;
 }
@@ -54,11 +52,11 @@ body {
 .header nav ul {
   list-style: none;
 }
-.header nav li .active {
+.header nav ul li .active {
   color: rgba(254, 203, 1, 0.258);
   text-align: center;
 }
-.header nav li a {
+.header nav ul li a {
   margin-left: 70px;
   text-decoration: none;
   color: rgba(0, 0, 0, 0.838);
@@ -66,7 +64,7 @@ body {
   line-height: 40px;
   transition: 0.3s ease-out;
 }
-.header nav li:hover :hover {
+.header nav ul:hover :hover {
   color: rgba(151, 251, 234, 0.279);
 }
 .header h1 {
@@ -95,7 +93,7 @@ body {
   font-weight: 300;
 }
 .header .button-1 {
-  background-color: rgba(176, 136, 202, 0.578);
+  background-color: lightblue;
   border-radius: 8px;
   border-style: none;
   color: rgb(255, 255, 255);
@@ -160,7 +158,7 @@ body {
   display: flex;
   flex-direction: column;
   padding: 20px;
-  background-color: rgba(176, 136, 202, 0.578);
+  background-color: #fff;
 }
 .service-section .service {
   border: 1px solid rgb(255, 255, 255);
@@ -232,20 +230,20 @@ footer .text-footer {
 }
 
 @media screen and (min-width: 556px) {
-  .content .toggler {
+  .content-nav .toggler {
     display: none;
   }
-  .content nav {
+  .content-nav nav {
     display: inline-block !important; /* prevent the nav to hide when resize */
     position: relative;
     max-width: 70%;
     margin-left: 30px;
   }
-  .content nav ul {
+  .content-nav nav ul {
     display: flex;
     justify-content: space-around;
   }
-  .content nav ul li {
+  .content-nav nav ul li {
     display: inline-block;
     border: 1px solid rgb(255, 255, 255);
     text-align: center;
@@ -253,11 +251,11 @@ footer .text-footer {
     width: 150px;
     border-radius: 15px;
   }
-  .content nav ul li:hover {
+  .content-nav nav ul li:hover {
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     border-radius: 10px;
   }
-  .content nav ul li a {
+  .content-nav nav ul li a {
     text-align: center;
     padding: auto;
     margin: auto;
