--- a/style.css
+++ b/style.css
@@ -1,6 +1,53 @@
 @import url("https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,900;1,100;1,300;1,400;1,500;1,700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;400;500;600&display=swap");
+header .content-nav {
+  padding: 10px 20px;
+  background-color: rgba(176, 136, 202, 0.555);
+  display: flex;
+  justify-content: space-between;
+}
+header .content-nav .logo:hover {
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+}
+header .content-nav .toggler {
+  cursor: pointer;
+  position: absolute;
+  top: 8px;
+  right: 50px;
+}
+header .content-nav .toggler button {
+  background-color: transparent;
+  border: none;
+}
+header .content-nav .toggler button:hover {
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+}
+header nav {
+  width: 100%;
+  display: none;
+}
+header nav ul {
+  list-style: none;
+}
+header nav ul li .active {
+  color: rgb(255, 255, 255);
+  text-align: center;
+}
+header nav ul li a {
+  margin-left: 70px;
+  text-decoration: none;
+  color: rgba(0, 0, 0, 0.838);
+  font-size: 18px;
+  line-height: 40px;
+  transition: 0.3s ease-out;
+}
+header nav ul:hover :hover {
+  color: rgba(151, 251, 234, 0.279);
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -158,7 +205,7 @@ body {
   display: flex;
   flex-direction: column;
   padding: 20px;
-  background-color: #fff;
+  background-color: rgba(176, 136, 202, 0.555);
 }
 .service-section .service {
   border: 1px solid rgb(255, 255, 255);
@@ -323,5 +370,64 @@ footer .text-footer {
   .om-oss .om-oss-wrapper .om-oss-text p {
     font-size: 1.3rem;
     padding: 30px;
+  }
+}
+.contact-form {
+  margin: 20px;
+  background-color: #ffffff;
+  border-radius: 10px;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
+  width: 100%;
+  max-width: 400px;
+  padding: 30px;
+  text-align: center;
+}
+
+.contact-form h2 {
+  color: #333;
+  font-size: 24px;
+  margin-bottom: 20px;
+}
+
+.form-group {
+  margin-bottom: 20px;
+}
+
+.form-group label {
+  font-weight: bold;
+  display: block;
+  margin-bottom: 5px;
+}
+
+.form-group input,
+.form-group textarea {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.form-group textarea {
+  resize: none;
+}
+
+button {
+  width: 100%;
+  padding: 10px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+button:hover {
+  background-color: #0056b3;
+}
+
+@media screen and (min-width: 768px) {
+  .contact-form {
+    width: 80%;
   }
 }/*# sourceMappingURL=style.css.map */
