--- a/style.scss
+++ b/style.scss
@@ -1,29 +1,10 @@
 
+@import "./variables";
+@import "./navbar";
 
 
-$color-1:#fff;
-$color-2:rgba(151, 251, 234, 0.279);
-$color-3:rgba(254, 203, 1, 0.258);
 
-$box-shadow-1:0px 8px 16px 0px rgba(0,0,0,0.2);
 
-$font-color-1:rgba(0, 0, 0, 0.838);
-$font-color-2:rgb(255, 255, 255);
-$font-color-hover: rgba(0,0,0,0);
-
-@mixin button-Style{
-  &:hover{
-    box-shadow: $box-shadow-1;
-    border-radius: 10px;
-   }
-}
-
-@mixin button-Style-2{
-  &:hover{
-    
-    background-color: $color-3;
-   }
-}
 
 
 //fonts
@@ -454,6 +435,69 @@ footer{
 }
 
 //Kontakt
+
+
+
+.contact-form {
+  margin: 20px ;
+  background-color: #ffffff;
+  border-radius: 10px;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
+  width: 100%;
+  max-width: 400px;
+  padding: 30px;
+  text-align: center;
+}
+
+.contact-form h2 {
+  color: #333;
+  font-size: 24px;
+  margin-bottom: 20px;
+}
+
+.form-group {
+  margin-bottom: 20px;
+}
+
+.form-group label {
+  font-weight: bold;
+  display: block;
+  margin-bottom: 5px;
+}
+
+.form-group input,
+.form-group textarea {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.form-group textarea {
+  resize: none;
+}
+
+button {
+  width: 100%;
+  padding: 10px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+button:hover {
+  background-color: #0056b3;
+}
+
+@media screen and (min-width: 768px) {
+  .contact-form {
+      width: 80%;
+  }
+}
+
 
 
 
