--- a/style.css
+++ b/style.css
@@ -48,6 +48,91 @@ header nav ul:hover :hover {
   color: rgba(151, 251, 234, 0.279);
 }
 
+.container-form {
+  width: 70%;
+  margin: 30px auto;
+  display: flex;
+  flex-direction: column;
+}
+.container-form .text-form-wrapper {
+  margin: auto;
+  width: 90%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  align-content: center;
+}
+.container-form .text-form-wrapper .contact-title p {
+  font-size: 2rem;
+  text-align: center;
+}
+.container-form .text-form-wrapper img {
+  width: 70%;
+  max-width: 400px;
+}
+.container-form .text-form-wrapper .content-text {
+  padding: 10px 20px;
+}
+.container-form .text-form-wrapper .content-text p .bold {
+  font-size: 1.2rem;
+  font-family: sans-serif;
+}
+.container-form .contact-form {
+  background-color: #ffffff;
+  border-radius: 10px;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
+  width: 100%;
+  max-width: 400px;
+  padding: 30px;
+  text-align: center;
+}
+.container-form .contact-form h2 {
+  color: #333;
+  font-size: 24px;
+  margin-bottom: 20px;
+}
+.container-form .form-group {
+  margin-bottom: 20px;
+}
+.container-form .form-group label {
+  font-weight: bold;
+  display: block;
+  margin-bottom: 5px;
+}
+.container-form .form-group input,
+.container-form .form-group textarea {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+.container-form .form-group textarea {
+  resize: none;
+}
+.container-form button {
+  width: 100%;
+  padding: 10px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+.container-form button:hover {
+  background-color: #0056b3;
+}
+
+@media screen and (min-width: 566px) {
+  .container-form {
+    flex-direction: row;
+  }
+  .container-form .contact-form {
+    width: 80%;
+  }
+}
 * {
   margin: 0;
   padding: 0;
@@ -370,64 +455,5 @@ footer .text-footer {
   .om-oss .om-oss-wrapper .om-oss-text p {
     font-size: 1.3rem;
     padding: 30px;
-  }
-}
-.contact-form {
-  margin: 20px;
-  background-color: #ffffff;
-  border-radius: 10px;
-  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
-  width: 100%;
-  max-width: 400px;
-  padding: 30px;
-  text-align: center;
-}
-
-.contact-form h2 {
-  color: #333;
-  font-size: 24px;
-  margin-bottom: 20px;
-}
-
-.form-group {
-  margin-bottom: 20px;
-}
-
-.form-group label {
-  font-weight: bold;
-  display: block;
-  margin-bottom: 5px;
-}
-
-.form-group input,
-.form-group textarea {
-  width: 100%;
-  padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-}
-
-.form-group textarea {
-  resize: none;
-}
-
-button {
-  width: 100%;
-  padding: 10px;
-  background-color: #007bff;
-  color: #fff;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  transition: background-color 0.3s;
-}
-
-button:hover {
-  background-color: #0056b3;
-}
-
-@media screen and (min-width: 768px) {
-  .contact-form {
-    width: 80%;
   }
 }/*# sourceMappingURL=style.css.map */
