--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;500;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,900;1,100;1,300;1,400;1,500;1,700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;400;500;600&display=swap");
@@ -133,6 +134,108 @@ header nav ul:hover :hover {
     width: 80%;
   }
 }
+* {
+  font-family: Poppins;
+}
+
+a {
+  text-decoration: none;
+}
+
+#reviews {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+}
+#reviews .review-heading {
+  letter-spacing: 1px;
+  margin: 30px 0px;
+  padding: 10px 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+#reviews .review-heading h1 {
+  font-size: 2.2rem;
+  font-weight: 500;
+  background-color: lightblue;
+  color: black;
+  padding: 10px 20px;
+}
+#reviews .review-heading span {
+  font-size: 1.3rem;
+  color: black;
+  margin-bottom: 10px;
+  letter-spacing: 10px;
+  text-transform: uppercase;
+}
+#reviews .review-box-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+#reviews .review-box-container .review-box {
+  min-width: 200px;
+  max-width: 400px;
+  box-shadow: 2px 2px 30px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+  margin: 15px;
+  cursor: pointer;
+}
+#reviews .review-box-container .review-box:hover {
+  transform: translateY(-10px);
+  transition: all ease 0.3s;
+}
+#reviews .review-box-container .review-box .box-top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+}
+#reviews .review-box-container .review-box .box-top .profile-img {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  overflow: hidden;
+  margin-right: 10px;
+}
+#reviews .review-box-container .review-box .box-top .profile-img img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+}
+#reviews .review-box-container .review-box .client-comment p {
+  font-size: 0.9rem;
+  color: gray;
+}
+#reviews .review-box-container .review-box .profile {
+  display: flex;
+  align-items: center;
+}
+#reviews .review-box-container .review-box .name-user {
+  display: flex;
+  flex-direction: column;
+}
+#reviews .review-box-container .review-box .name-user strong {
+  color: aquamarine;
+  font-size: 1.1rem;
+  letter-spacing: 0.5px;
+}
+#reviews .review-box-container .review-box .name-user span {
+  color: gray;
+  font-size: 0.8rem;
+}
+#reviews .review-box-container .review-box .reviews-star {
+  color: yellow;
+}
+
 * {
   margin: 0;
   padding: 0;
