--- a/style.css
+++ b/style.css
@@ -307,7 +307,7 @@ body {
 }
 .header .content-nav {
   padding: 10px 20px;
-  background-color: lightblue;
+  background-color: rgba(176, 136, 202, 0.555);
   display: flex;
   justify-content: space-between;
 }
@@ -377,7 +377,7 @@ body {
   font-weight: 300;
 }
 .header .button-1 {
-  background-color: lightblue;
+  background-color: rgba(176, 136, 202, 0.555);
   border-radius: 8px;
   border-style: none;
   color: rgb(255, 255, 255);
@@ -390,7 +390,7 @@ body {
   line-height: 20px;
   outline: none;
   padding: 10px 16px;
-  margin-top: 300px;
+  margin-top: 350px;
   margin-left: 25px;
   text-align: center;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
@@ -404,8 +404,10 @@ body {
   text-align: center;
   align-items: center;
   display: flex;
+  border: 1px solid black;
 }
 .om-oss .om-oss-wrapper {
+  border: 1px solid black;
   height: 100vh;
   display: flex;
   flex-direction: column;
@@ -563,49 +565,43 @@ footer .text-footer {
     max-width: 100%;
   }
   .om-oss {
+    background-color: red;
     flex-direction: row;
     justify-content: space-around;
-    width: 100vw;
-    padding: 50px;
-    height: 100vh;
+    padding: 10px;
     align-content: center;
     align-items: center;
   }
   .om-oss .om-oss-wrapper {
+    border: 1px solid black;
     margin: auto;
     padding: auto;
     position: relative;
     flex-direction: row;
     justify-content: space-around;
     padding-top: 100px;
-    min-width: 600px;
-    flex-wrap: wrap;
   }
   .om-oss .om-oss-wrapper .om-oss-title {
-    width: 13%;
-    max-width: 200x;
+    border: 1px solid black;
     position: absolute;
     top: 60px;
   }
   .om-oss .om-oss-wrapper .om-oss-img {
     width: 40%;
-    height: 70%;
-    max-width: 500px;
+    border: 1px solid black;
     padding: 0px;
     margin: auto;
     padding: 0px;
     border-radius: 0px;
   }
   .om-oss .om-oss-wrapper .om-oss-text {
-    margin: auto;
-    padding: auto;
-    height: 70%;
-    width: 60%;
+    border: 1px solid rgb(7, 5, 5);
+    width: 40%;
     width: 50%;
     max-width: 400px;
   }
   .om-oss .om-oss-wrapper .om-oss-text p {
-    font-size: 1.3rem;
+    font-size: 1.1rem;
     padding: 30px;
   }
 }/*# sourceMappingURL=style.css.map */
